--- a/.github/workflows/CommentPR.yml
+++ b/.github/workflows/CommentPR.yml
@@ -12,7 +12,7 @@ jobs:
   upload:
     runs-on: ubuntu-latest
     steps:
-      - name: 'Download artifact'
+      - name: 'Download PR'
         uses: actions/github-script@v3.1.0
         with:
           script: |
@@ -34,9 +34,40 @@ jobs:
             fs.writeFileSync('${{github.workspace}}/pr.zip', Buffer.from(download.data));
       - run: unzip pr.zip
 
-      - name: Post comment
-        uses: thollander/actions-comment-pull-request@v2
+      - name: 'Download canbench comments'
+        uses: actions/github-script@v3.1.0
         with:
-          message: "this is a message"
-          comment_tag: comment_tag
+          script: |
+            var artifacts = await github.actions.listWorkflowRunArtifacts({
+               owner: context.repo.owner,
+               repo: context.repo.repo,
+               run_id: ${{github.event.workflow_run.id }},
+            });
+            var matchArtifact = artifacts.data.artifacts.filter((artifact) => {
+              return artifact.name == "canbench_comments"
+            })[0];
+            var download = await github.actions.downloadArtifact({
+               owner: context.repo.owner,
+               repo: context.repo.repo,
+               artifact_id: matchArtifact.id,
+               archive_format: 'zip',
+            });
+            var fs = require('fs');
+            fs.writeFileSync('${{github.workspace}}/canbench_comments.zip', Buffer.from(download.data));
+      - run: unzip canbench_comments.zip
+
+      - name: 'Comment on PR'
+        uses: actions/github-script@v3
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            var fs = require('fs');
+            var issue_number = Number(fs.readFileSync('./NR'));
+            var message = Number(fs.readFileSync('./canbench_comment'));
+            await github.issues.createComment({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              issue_number: issue_number,
+              body: message,
+            });
 
