--- a/.github/workflows/CommentPR.yml
+++ b/.github/workflows/CommentPR.yml
@@ -56,6 +56,15 @@ jobs:
             fs.writeFileSync('${{github.workspace}}/canbench_comments.zip', Buffer.from(download.data));
       - run: unzip canbench_comments.zip
 
+      - name: 'Set PR'
+        uses: actions/github-script@v3.1.0
+        id: set_pr
+        run: echo "::set-output name=number::$(echo 42)"
+
+      - name: 'Read PR'
+        uses: actions/github-script@v3.1.0
+        run: echo "The number is ${{ steps.set_pr.outputs.number }}"
+
       - name: 'Comment on PR'
         uses: actions/github-script@v3
         with:
@@ -63,7 +72,11 @@ jobs:
           script: |
             var fs = require('fs');
             var issue_number = Number(fs.readFileSync('./NR'));
-            var message = fs.readFileSync('./canbench_comment');
+            var message = fs.readFileSync('./canbench_comment', {encoding: 'utf8'});
+            console.log("issue_number");
+            console.log(issue_number);
+            console.log("message");
+            console.log(message);
             await github.issues.createComment({
               owner: context.repo.owner,
               repo: context.repo.repo,
