--- a/.github/workflows/CommentPR.yml
+++ b/.github/workflows/CommentPR.yml
@@ -12,27 +12,11 @@ jobs:
   upload:
     runs-on: ubuntu-latest
     steps:
-      - name: 'Download PR'
-        uses: actions/github-script@v3.1.0
+
+      - name: Download artifact
+        uses: actions/download-artifact@v2
         with:
-          script: |
-            var artifacts = await github.actions.listWorkflowRunArtifacts({
-               owner: context.repo.owner,
-               repo: context.repo.repo,
-               run_id: ${{github.event.workflow_run.id }},
-            });
-            var matchArtifact = artifacts.data.artifacts.filter((artifact) => {
-              return artifact.name == "pr"
-            })[0];
-            var download = await github.actions.downloadArtifact({
-               owner: context.repo.owner,
-               repo: context.repo.repo,
-               artifact_id: matchArtifact.id,
-               archive_format: 'zip',
-            });
-            var fs = require('fs');
-            fs.writeFileSync('${{github.workspace}}/pr.zip', Buffer.from(download.data));
-      - run: unzip pr.zip
+          name: pr-number
 
       - name: 'Download canbench comments'
         uses: actions/github-script@v3.1.0
@@ -58,7 +42,7 @@ jobs:
 
       - name: 'Set PR'
         id: set_pr
-        run: echo "::set-output name=pr_number::$(cat ./NR)"
+        run: echo "::set-output name=pr_number::$(cat ./pr-number)"
 
       - name: 'Read PR'
         run: echo "The number is ${{ steps.set_pr.outputs.pr_number }}"
