--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -82,15 +82,6 @@ jobs:
           name: canbench_result_${{github.job}}
           path: /tmp/canbench_result_${{ github.job }}
 
-      - name: Upload PR number
-        run: |
-          echo ${{ github.event.number }} > /tmp/pr_number
-
-      - uses: actions/upload-artifact@v4
-        with:
-          name: pr_number
-          path: /tmp/pr_number
-
       - name: Pass or fail
         run: |
           bash ./scripts/ci_post_run_benchmark.sh
@@ -133,15 +124,6 @@ jobs:
           name: canbench_result_${{github.job}}
           path: /tmp/canbench_result_${{ github.job }}
 
-      - name: Upload PR number
-        run: |
-          echo ${{ github.event.number }} > /tmp/pr_number
-
-      - uses: actions/upload-artifact@v4
-        with:
-          name: pr_number
-          path: /tmp/pr_number
-
       - name: Pass or fail
         run: |
           bash ./scripts/ci_post_run_benchmark.sh
@@ -155,6 +137,21 @@ jobs:
       uses: ludeeus/action-shellcheck@master
       env:
         SHELLCHECK_OPTS: -e SC1090 -e SC2119 -e SC1091
+
+  upload-pr-number:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Save PR number
+        run: |
+          echo ${{ github.event.number }} > /tmp/pr_number
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: pr_number
+          path: /tmp/pr_number
 
   checks-pass:
     # Always run this job!
