--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,13 +75,12 @@ jobs:
 
       - name: Benchmark
         run: |
-          bash ./scripts/ci_run_benchmark.sh $PROJECT_DIR
+          bash ./scripts/ci_run_benchmark.sh $PROJECT_DIR ${{ github.job }}
 
-      - name: Post comment
-        uses: thollander/actions-comment-pull-request@v2
+      - uses: actions/upload-artifact@v4
         with:
-          filePath: /tmp/canbench_comment_message.txt
-          comment_tag: ${{ env.PROJECT_DIR }}
+          name: canbench_result_${{github.job}}
+          path: /tmp/canbench_result_${{ github.job }}
 
       - name: Pass or fail
         run: |
@@ -118,13 +117,12 @@ jobs:
 
       - name: Benchmark
         run: |
-          bash ./scripts/ci_run_benchmark.sh $PROJECT_DIR
+          bash ./scripts/ci_run_benchmark.sh $PROJECT_DIR ${{ github.job }}
 
-      - name: Post comment
-        uses: thollander/actions-comment-pull-request@v2
+      - uses: actions/upload-artifact@v4
         with:
-          filePath: /tmp/canbench_comment_message.txt
-          comment_tag: ${{ env.PROJECT_DIR }}
+          name: canbench_result_${{github.job}}
+          path: /tmp/canbench_result_${{ github.job }}
 
       - name: Pass or fail
         run: |
@@ -139,6 +137,21 @@ jobs:
       uses: ludeeus/action-shellcheck@master
       env:
         SHELLCHECK_OPTS: -e SC1090 -e SC2119 -e SC1091
+
+  upload-pr-number:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Save PR number
+        run: |
+          echo ${{ github.event.number }} > /tmp/pr_number
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: pr_number
+          path: /tmp/pr_number
 
   checks-pass:
     # Always run this job!
