--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,11 +4,15 @@ members = [
   "canbench-rs",
   "canbench-rs-macros",
   "examples",
-  "tests"
+  "tests",
 ]
 resolver = "2"
 
 [workspace.dependencies]
+reqwest = { version = "0.11.23", features = [
+  "blocking",
+  "rustls-tls-webpki-roots",
+], default-features = false }
 candid = "0.10.3"
 clap = { version = "4.0.11", features = ["derive"] }
 colored = "2.0.4"
@@ -18,7 +22,6 @@ ic-cdk = "0.12.1"
 ic-cdk-macros = "0.8.4"
 proc-macro2 = "1.0"
 quote = "1.0"
-reqwest = { version = "0.11.23", features = ["blocking"] }
 semver = "1.0.21"
 serde = "1.0"
 serde_yaml = "0.9"
