--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,4 +29,4 @@ sha256 = "1.5.0"
 syn = "1.0"
 tempfile = "3.3.0"
 wasmparser = "0.119.0"
-pocket-ic = { path = "/home/mwe/dup/ic/packages/pocket-ic" }
+pocket-ic = "3.0.0"
