feat: Add init arg support
This PR adds init arg support to canbench, so that canisters with init
args can also be benchmarked.

The init arg can be set using `init` in the canbench.yml file.

--- a/tests/Cargo.toml
+++ b/tests/Cargo.toml
@@ -13,8 +13,13 @@ path = "measurements_output/src/main.rs"
 name = "gzipped_wasm"
 path = "gzipped_wasm/src/main.rs"
 
+[[bin]]
+name = "init_arg"
+path = "init_arg/src/main.rs"
+
 [dependencies]
 canbench-rs = { path = "../canbench-rs" }
 candid.workspace = true
 ic-cdk.workspace= true
+ic-cdk-macros.workspace= true
 serde.workspace = true
