--- a/canbench-bin/Cargo.toml
+++ b/canbench-bin/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "canbench"
-version = "0.1.6"
+version = "0.1.6" # NOTE: whenever this is updated, canbench-rs-macros below should also be updated.
 edition = "2021"
 license = "Apache-2.0"
 description = "A benchmarking framework for canisters on the Internet Computer."
@@ -13,7 +13,7 @@ name = "canbench"
 path = "src/main.rs"
 
 [dependencies]
-canbench-rs = { path = "../canbench-rs" }
+canbench-rs = { path = "../canbench-rs", version = "0.1.6" }
 candid.workspace = true
 clap.workspace = true
 colored.workspace = true
