--- a/canbench-rs/Cargo.toml
+++ b/canbench-rs/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "canbench-rs"
-version = "0.1.6" # NOTE: whenever this is updated, canbench-rs-macros below should also be updated.
+# NOTE: whenever this is updated, canbench-rs-macros below should also be updated.
+version = "0.1.7"
 edition = "2021"
 license = "Apache-2.0"
 description = "The rust library for `canbench`, the benchmarking framework for canisters on the Internet Computer."
@@ -14,13 +15,13 @@ readme = "../README.md"
 path = "src/lib.rs"
 
 [dependencies]
-canbench-rs-macros = { path = "../canbench-rs-macros", version = "0.1.6" }
+canbench-rs-macros = { path = "../canbench-rs-macros", version = "0.1.7" }
 candid.workspace = true
-ic-cdk.workspace= true
+ic-cdk.workspace = true
 serde.workspace = true
 
 [dev-dependencies]
-ic-cdk-macros.workspace= true
+ic-cdk-macros.workspace = true
 
 [features]
 canbench = [] # required for doc tests
