--- a/tests/Cargo.toml
+++ b/tests/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
+edition = "2021"
 name = "tests"
 version = "0.1.0"
-edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -12,6 +12,10 @@ path = "measurements_output/src/main.rs"
 [[bin]]
 name = "gzipped_wasm"
 path = "gzipped_wasm/src/main.rs"
+
+[[bin]]
+name = "debug_print"
+path = "debug_print/src/main.rs"
 
 [[bin]]
 name = "init_arg"
@@ -28,6 +32,6 @@ path = "stable_memory_invalid/src/main.rs"
 [dependencies]
 canbench-rs = { path = "../canbench-rs" }
 candid.workspace = true
-ic-cdk.workspace= true
-ic-cdk-macros.workspace= true
+ic-cdk.workspace = true
+ic-cdk-macros.workspace = true
 serde.workspace = true
