--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,5 +28,7 @@ serde_yaml = "0.9"
 sha256 = "1.5.0"
 syn = "1.0"
 tempfile = "3.3.0"
+walrus = "0.23.3"
 wasmparser = "0.119.0"
 pocket-ic = "6.0.0"
+rustc-demangle = "0.1"
