--- a/canbench-bin/Cargo.toml
+++ b/canbench-bin/Cargo.toml
@@ -39,4 +39,5 @@ wasmparser.workspace = true
 pretty_assertions = "1.4.0"
 
 [features]
+# Enables automatic overwriting of expected test output files during test runs.
 overwrite = []
