test: move expected test outputs to files for easier updates (#101)
Improve DX for updating tests by moving expected outputs to separate
files.

This PR simplifies test maintenance by storing expected outputs in
dedicated files instead of hardcoded strings within test code. This
makes it easier to apply changes by using the `--features overwrite`
flag to automatically update expected outputs.

Minor formatting adjustments were made in the summary output functions:
- use sign for absolute changes
- don't count new benchmarks as absolute changes from zero

--- a/canbench-bin/Cargo.toml
+++ b/canbench-bin/Cargo.toml
@@ -37,3 +37,7 @@ wasmparser.workspace = true
 
 [dev-dependencies]
 pretty_assertions = "1.4.0"
+
+[features]
+# Enables automatic overwriting of expected test output files during test runs.
+overwrite = []
