--- a/canbench-bin/Cargo.toml
+++ b/canbench-bin/Cargo.toml
@@ -6,7 +6,7 @@ keywords = ["benchmark", "canister", "ic", "internet-computer", "perf"]
 license = "Apache-2.0"
 readme = "../README.md"
 repository = "https://github.com/dfinity/canbench"
-# NOTE: whenever this version is updated, canbench-rs below should also be updated.
+# NOTE: Update `canbench-rs` version below when this changes.
 version = "0.1.12"
 
 [[bin]]
