--- a/canbench-rs/Cargo.toml
+++ b/canbench-rs/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "canbench-rs"
-# NOTE: whenever this is updated, canbench-rs-macros below should also be updated.
 description = "The rust library for `canbench`, the benchmarking framework for canisters on the Internet Computer."
 edition = "2021"
 keywords = ["benchmark", "canister", "ic", "internet-computer", "perf"]
 license = "Apache-2.0"
 readme = "../README.md"
 repository = "https://github.com/dfinity/canbench"
-version = "0.1.11"
+# NOTE: Update `canbench-rs-macros` version below when this changes.
+version = "0.1.12"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -15,7 +15,7 @@ version = "0.1.11"
 path = "src/lib.rs"
 
 [dependencies]
-canbench-rs-macros = { path = "../canbench-rs-macros", version = "0.1.11" }
+canbench-rs-macros = { path = "../canbench-rs-macros", version = "0.1.12" }
 candid.workspace = true
 ic-cdk.workspace = true
 serde.workspace = true
