--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -126,6 +126,11 @@ jobs:
           name: canbench_result_${{github.job}}
           path: /tmp/canbench_result_${{ github.job }}
 
+      - uses: actions/upload-artifact@v4
+        with:
+          name: canbench_results.csv
+          path: ${{ env.PROJECT_DIR }}/canbench_results.csv
+
       - name: Pass or fail
         run: |
           bash ./scripts/ci_post_run_benchmark.sh
