--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -128,7 +128,7 @@ jobs:
 
       - uses: actions/upload-artifact@v4
         with:
-          name: canbench_results.csv
+          name: canbench_results_${{github.job}}.csv
           path: ${{ env.PROJECT_DIR }}/canbench_results.csv
 
       - name: Pass or fail
