--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -87,7 +87,7 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           name: canbench_results_${{github.job}}_csv
-          path: ${{ env.PROJECT_DIR }}/canbench_results.csv
+          path: /tmp/canbench_results_${{ github.job }}.csv
 
       - name: Pass or fail
         run: |
@@ -134,7 +134,7 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           name: canbench_results_${{github.job}}_csv
-          path: ${{ env.PROJECT_DIR }}/canbench_results.csv
+          path: /tmp/canbench_results_${{ github.job }}.csv
 
       - name: Pass or fail
         run: |
