--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,6 +84,11 @@ jobs:
           name: canbench_result_${{github.job}}
           path: /tmp/canbench_result_${{ github.job }}
 
+      - uses: actions/upload-artifact@v4
+        with:
+          name: canbench_results_${{github.job}}_csv
+          path: /tmp/canbench_results_${{ github.job }}.csv
+
       - name: Pass or fail
         run: |
           bash ./scripts/ci_post_run_benchmark.sh
@@ -125,6 +130,11 @@ jobs:
         with:
           name: canbench_result_${{github.job}}
           path: /tmp/canbench_result_${{ github.job }}
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: canbench_results_${{github.job}}_csv
+          path: /tmp/canbench_results_${{ github.job }}.csv
 
       - name: Pass or fail
         run: |
