--- a/tests/Cargo.toml
+++ b/tests/Cargo.toml
@@ -31,6 +31,7 @@ path = "stable_memory_invalid/src/main.rs"
 
 [dependencies]
 canbench-rs = { path = "../canbench-rs" }
+canbench-rs-macros = { path = "../canbench-rs-macros" }
 candid.workspace = true
 ic-cdk.workspace = true
 ic-cdk-macros.workspace = true
