--- a/tests/Cargo.toml
+++ b/tests/Cargo.toml
@@ -32,6 +32,7 @@ path = "stable_memory_invalid/src/main.rs"
 [dependencies]
 canbench-rs = { path = "../canbench-rs" }
 candid.workspace = true
-ic-cdk.workspace = true
 ic-cdk-macros.workspace = true
+ic-cdk.workspace = true
+num_enum.workspace = true
 serde.workspace = true
