--- a/examples/btreemap_vs_hashmap/canbench_results.yml
+++ b/examples/btreemap_vs_hashmap/canbench_results.yml
@@ -1,26 +1,31 @@
 benches:
   insert_users:
     total:
+      calls: 1
       instructions: 2558172165
       heap_increase: 871
       stable_memory_increase: 0
     scopes: {}
   pre_upgrade_bench:
     total:
-      instructions: 438873073
+      calls: 1
+      instructions: 438873069
       heap_increase: 519
       stable_memory_increase: 184
     scopes:
       serialize_state:
+        calls: 1
         instructions: 423940174
         heap_increase: 519
         stable_memory_increase: 0
       writing_to_stable_memory:
+        calls: 1
         instructions: 14930542
         heap_increase: 0
         stable_memory_increase: 184
   remove_users:
     total:
+      calls: 1
       instructions: 2109136823
       heap_increase: 0
       stable_memory_increase: 0
