--- a/tests/init_arg/canbench_results.yml
+++ b/tests/init_arg/canbench_results.yml
@@ -1,6 +1,7 @@
 benches:
   state_check:
     total:
+      calls: 1
       instructions: 841
       heap_increase: 0
       stable_memory_increase: 0
