--- a/examples/fibonacci/canbench.yml
+++ b/examples/fibonacci/canbench.yml
@@ -1,5 +1,3 @@
-build_cmd:
-  cargo build --release --target wasm32-unknown-unknown --features canbench-rs
+build_cmd: cargo build --release --target wasm32-unknown-unknown --locked --features canbench-rs
 
-wasm_path:
-  ../../target/wasm32-unknown-unknown/release/fibonacci.wasm
+wasm_path: ../../target/wasm32-unknown-unknown/release/fibonacci.wasm
