--- a/tests/stable_memory/canbench.yml
+++ b/tests/stable_memory/canbench.yml
@@ -1,9 +1,6 @@
-build_cmd:
-  cargo build --release --target wasm32-unknown-unknown
+build_cmd: cargo build --release --target wasm32-unknown-unknown --locked
 
-wasm_path:
-  ../../target/wasm32-unknown-unknown/release/stable_memory.wasm
+wasm_path: ../../target/wasm32-unknown-unknown/release/stable_memory.wasm
 
 stable_memory:
-  file:
-    stable_memory.bin
+  file: stable_memory.bin
