--- a/tests/measurements_output/canbench_results.yml
+++ b/tests/measurements_output/canbench_results.yml
@@ -75,4 +75,23 @@ benches:
         calls: 10
         heap_increase: 12
         instructions: 800
+
+  # A benchmark that checks nested scopes.
+  bench_nested_scopes:
+    total:
+      calls: 1
+      heap_increase: 0
+      instructions: 46740
+      stable_memory_increase: 0
+
+    scopes:
+      nested_scope_1:
+        calls: 10
+        heap_increase: 0
+        instructions: 11990
+
+      nested_scope_2:
+        calls: 20
+        heap_increase: 0
+        instructions: 32280
 version: 0.1.15
