--- a/tests/measurements_output/canbench_results.yml
+++ b/tests/measurements_output/canbench_results.yml
@@ -81,17 +81,17 @@ benches:
     total:
       calls: 1
       heap_increase: 0
-      instructions: 63490
+      instructions: 30090000
       stable_memory_increase: 0
 
     scopes:
       nested_scope_1:
         calls: 10
         heap_increase: 0
-        instructions: 17140
+        instructions: 10030000
 
       nested_scope_2:
         calls: 20
         heap_increase: 0
-        instructions: 42580
+        instructions: 20060000
 version: 0.1.15
