--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,7 +42,9 @@ jobs:
         run: cargo clippy --tests --benches -- -D clippy::all
 
       - name: Test
-        run: cargo test --all-features --color always -- --color always --test-threads=1
+        # Do not use `--all-features` because it enables `overwrite`, which auto-updates expected outputs.
+        # This makes tests always pass by overwriting failures, effectively disabling test validation.
+        run: cargo test --features=canbench --color always -- --color always --test-threads=1
         env:
           RUST_BACKTRACE: 1
 
