--- a/canbench-bin/Cargo.toml
+++ b/canbench-bin/Cargo.toml
@@ -6,15 +6,16 @@ license = "Apache-2.0"
 name = "canbench"
 readme = "../README.md"
 repository = "https://github.com/dfinity/canbench"
-# NOTE: Update `canbench-rs` version below when this changes.
-version = "0.4.0"
+# Version is set by a Github workflow from the git tag
+version = "0.0.0-git"
 
 [[bin]]
 name = "canbench"
 path = "src/main.rs"
 
 [dependencies]
-canbench-rs = { path = "../canbench-rs", version = "0.4.0" }
+# canbench-rs version tag is set by a Github workflow from the git tag 
+canbench-rs = { path = "../canbench-rs" }
 candid.workspace = true
 clap.workspace = true
 colored.workspace = true
