--- a/canbench-rs-macros/Cargo.toml
+++ b/canbench-rs-macros/Cargo.toml
@@ -4,7 +4,7 @@ edition = "2021"
 license = "Apache-2.0"
 name = "canbench-rs-macros"
 repository = "https://github.com/dfinity/canbench"
-version = "0.4.0"
+version = "0.0.0-git"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
