--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,9 +1,7 @@
 name: Publish canbench crates to crates.io
 
 on:
-  push:
-    tags:
-      - "v*"
+  workflow_dispatch:
 
 jobs:
   publish-canbench:
@@ -18,26 +16,15 @@ jobs:
       - uses: rust-lang/crates-io-auth-action@v1
         id: auth
 
-      - name: Set Cargo.toml version
-        shell: bash
-        env:
-          RELEASE_TAG: ${{ github.ref }}
-        run: |
-          sed -i -e "s/0\\.0\\.0-git/${RELEASE_TAG##*\/v}/" canbench-rs-macros/Cargo.toml
-          sed -i -e "s/\(^canbench-rs-macros.*\"\).* }/\1, version=\"${RELEASE_TAG##*\/v}\" }/" canbench-rs/Cargo.toml 
-          sed -i -e "s/0\\.0\\.0-git/${RELEASE_TAG##*\/v}/" canbench-rs/Cargo.toml
-          sed -i -e "s/\(^canbench-rs.*\"\).* }/\1, version=\"${RELEASE_TAG##*\/v}\" }/" canbench-bin/Cargo.toml 
-          sed -i -e "s/0\\.0\\.0-git/${RELEASE_TAG##*\/v}/" canbench-bin/Cargo.toml
-
-      - run: cargo publish -p canbench-rs-macros --allow-dirty
+      - run: cargo publish -p canbench-rs-macros
         env:
           CARGO_REGISTRY_TOKEN: ${{ steps.auth.outputs.token }}
 
-      - run: cargo publish -p canbench-rs --allow-dirty
+      - run: cargo publish -p canbench-rs
         env:
           CARGO_REGISTRY_TOKEN: ${{ steps.auth.outputs.token }}
 
-      - run: cargo publish -p canbench --allow-dirty
+      - run: cargo publish -p canbench
         env:
           CARGO_REGISTRY_TOKEN: ${{ steps.auth.outputs.token }}
 
