--- a/canbench-bin/Cargo.toml
+++ b/canbench-bin/Cargo.toml
@@ -6,16 +6,15 @@ license = "Apache-2.0"
 name = "canbench"
 readme = "../README.md"
 repository = "https://github.com/dfinity/canbench"
-# Version is set by a Github workflow from the git tag
-version = "0.0.0-git"
+# NOTE: Update `canbench-rs` version below when this changes.
+version = "0.4.0"
 
 [[bin]]
 name = "canbench"
 path = "src/main.rs"
 
 [dependencies]
-# canbench-rs version tag is set by a Github workflow from the git tag 
-canbench-rs = { path = "../canbench-rs" }
+canbench-rs = { path = "../canbench-rs", version = "0.4.0" }
 candid.workspace = true
 clap.workspace = true
 colored.workspace = true
